Fix code smell and security issue